--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+<div class='moviePic'>
+	<img src='https://d3cif2hu95s88v.cloudfront.net/live-site-2016/product-image/010/15175829102018-02-02-600x600.jpg'>
+</div>
+	<p class='movieDetail'> this is beautifull flower</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
